--- a/quasar-project/package.json
+++ b/quasar-project/package.json
@@ -6,7 +6,7 @@
   "author": "Dennis <dennis.arcelopez@gmail.com>",
   "private": true,
   "scripts": {
-    "test": "echo \"No test specified\" && exit 0"
+    "icons": "icongenie generate -i src/icon/AppIcon.png --skip-trim"
   },
   "dependencies": {
     "@quasar/extras": "^1.0.0",
