--- a/quasar-project/package.json
+++ b/quasar-project/package.json
@@ -9,9 +9,9 @@
     "icons": "icongenie generate -i src/icon/AppIcon.png --skip-trim"
   },
   "dependencies": {
-    "@quasar/extras": "^1.0.0",
+    "@quasar/extras": "^1.16.2",
     "core-js": "^3.6.5",
-    "quasar": "^2.6.0",
+    "quasar": "^2.11.10",
     "vue": "^3.0.0",
     "vue-router": "^4.0.0",
     "vuex": "^4.0.1"
@@ -19,7 +19,8 @@
   "devDependencies": {
     "@quasar/app-webpack": "^3.0.0",
     "node-sass": "^8.0.0",
-    "sass-loader": "^13.2.2"
+    "sass-loader": "^13.2.2",
+    "electron": "^24.0.0"
   },
   "browserslist": [
     "last 10 Chrome versions",
