--- a/quasar-project/package.json
+++ b/quasar-project/package.json
@@ -21,6 +21,7 @@
   "devDependencies": {
     "@quasar/app-webpack": "^3.0.0",
     "electron": "^24.0.0",
+    "electron-packager": "^15.5.2",
     "node-sass": "^8.0.0",
     "sass-loader": "^13.2.2"
   },
