-Install InAppBrowser to keep external links opened inside the app

--- a/quasar-project/src-cordova/package.json
+++ b/quasar-project/src-cordova/package.json
@@ -14,11 +14,13 @@
   "license": "Apache-2.0",
   "devDependencies": {
     "cordova-ios": "^6.3.0",
+    "cordova-plugin-inappbrowser": "^5.0.0",
     "cordova-plugin-ionic-webview": "^5.0.0"
   },
   "cordova": {
     "plugins": {
-      "cordova-plugin-ionic-webview": {}
+      "cordova-plugin-ionic-webview": {},
+      "cordova-plugin-inappbrowser": {}
     },
     "platforms": [
       "ios"
