--- a/quasar-project/src-cordova/package.json
+++ b/quasar-project/src-cordova/package.json
@@ -15,12 +15,14 @@
   "devDependencies": {
     "cordova-ios": "^6.3.0",
     "cordova-plugin-inappbrowser": "^5.0.0",
-    "cordova-plugin-ionic-webview": "^5.0.0"
+    "cordova-plugin-ionic-webview": "^5.0.0",
+    "cordova-plugin-splashscreen": "^6.0.2"
   },
   "cordova": {
     "plugins": {
       "cordova-plugin-ionic-webview": {},
-      "cordova-plugin-inappbrowser": {}
+      "cordova-plugin-inappbrowser": {},
+      "cordova-plugin-splashscreen": {}
     },
     "platforms": [
       "ios"
