--- a/quasar-project/src-cordova/package.json
+++ b/quasar-project/src-cordova/package.json
@@ -13,6 +13,7 @@
   "author": "Apache Cordova Team",
   "license": "Apache-2.0",
   "devDependencies": {
+    "cordova-android": "^10.1.2",
     "cordova-ios": "^6.3.0",
     "cordova-plugin-inappbrowser": "^5.0.0",
     "cordova-plugin-ionic-webview": "^5.0.0",
@@ -25,7 +26,8 @@
       "cordova-plugin-splashscreen": {}
     },
     "platforms": [
-      "ios"
+      "ios",
+      "android"
     ]
   }
 }
